# yaamf

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/yaamf/: CMakeLists.txt  integral.cpp  integral.h  main.cpp  mathtypes.cpp  mathtypes.h  tools.h  yaamf.cpp  yaamf.h
